instrumentations/javascript/express-node/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-crd-node-svc
  namespace: otel-crd-node
spec:
  type: ClusterIP
  selector:
    app: otel-crd-node
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
